update photos, color scheme, center images

--- a/_layouts/gallery.html
+++ b/_layouts/gallery.html
@@ -6,8 +6,8 @@ layout: base
 
 <style>
   .myimg{
-    width:250px;
-    height:250px;
+    width:246px;
+    height:246px;
     object-fit:cover;
     padding-bottom: 5px;
   }
@@ -34,6 +34,8 @@ layout: base
       'resizeDuration': 200,
       'fadeDuration': 200,
       'imageFadeDuration': 200,
+      'alwaysShowNavOnTouchDevices': true,
+      'positionFromTop': 0,
       'disableScrolling': true
     })
 </script>
