--- a/css/lightbox.css
+++ b/css/lightbox.css
@@ -202,3 +202,36 @@ body.lb-disable-scrolling {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
   opacity: 1;
 }
+
+.lightbox {
+   align-content: center;
+   align-items: center;
+   height :100%;
+   display: flex;
+   flex-direction: column;
+   position: fixed !important;
+   top: 0 !important;
+}
+
+#lightboxOverlay {
+  height: 100% !important;
+  left: 0;
+  position: fixed !important;
+  top: 0;
+  width: 100% !important;
+}
+
+.lb-outerContainer {
+    margin: auto;
+}
+
+.lb-image {
+   margin: auto;
+}
+
+.lb-close {
+    bottom: 100%;
+    position: fixed;
+    right: 3%;
+    top: 30px;
+  }
