--- a/_layouts/gallery.html
+++ b/_layouts/gallery.html
@@ -22,10 +22,12 @@ layout: base
             <img src="{{ page.imagefolder }}/{{ image.name }}" class="myimg" alt="{{ image.caption }}"></img>
           </a>
       {% endfor %}
+      <div>
+      <a href="#top_anchor_">[Back to top]</a>
+      </div>
     </div>
   </div>
 </div>
-
 <script type="text/javascript" src="/js/jquery-1.11.2.min.js"></script>
 <script type="text/javascript" src="/js/lightbox.js"></script>
 <link rel="stylesheet" href="/css/lightbox.css">
