--- a/_includes/footer-minimal.html
+++ b/_includes/footer-minimal.html
@@ -10,7 +10,7 @@
 
     {% if site.url-pretty %}
     &nbsp;&nbsp;&bull;&nbsp;&nbsp;
-    <a href="{{ '' | absolute_url }}">{{ site.url-pretty }}</a>
+    <a href="{{ '' | absolute_url }}" target="_blank">{{ site.url-pretty }}</a>
     {% endif %}
   </div>
 </footer>
