--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,11 +8,11 @@
             {%- assign element = site.data.SocialNetworks[curkey] -%}
             <li>
             {%- if curkey == 'rss' -%}
-              <a href="{{ '/feed.xml' | relative_url }}" title="{{ element.name }}">
+              <a href="{{ '/feed.xml' | relative_url }}" title="{{ element.name }}" target="_blank">
             {%- elsif curkey == 'yelp' -%}
-              <a href="https://{{ site.social-network-links[curkey] }}.yelp.com" title="{{ element.name }}">
+              <a href="https://{{ site.social-network-links[curkey] }}.yelp.com" title="{{ element.name }}" target="_blank">
             {%- else -%}
-              <a href="{{element.baseURL}}{{ site.social-network-links[curkey] }}" title="{{ element.name }}">
+              <a href="{{element.baseURL}}{{ site.social-network-links[curkey] }}" title="{{ element.name }}" target="_blank">
             {%- endif -%}
                 <span class="fa-stack fa-lg" aria-hidden="true">
                   <i class="fa fa-circle fa-stack-2x"></i>
@@ -30,7 +30,7 @@
 
       {% if site.url-pretty %}
       &nbsp;&bull;&nbsp;
-      <a href="{{ '' | absolute_url }}">{{ site.url-pretty }}</a>
+      <a href="{{ '' | absolute_url }}" target="_blank">{{ site.url-pretty }}</a>
       {% endif %}
 
       {% if site.matomo %}
@@ -43,7 +43,7 @@
           <!-- Please don't remove this, keep my open source work credited :) -->
     <p class="theme-by text-muted">
       Theme by
-      <a href="https://deanattali.com/beautiful-jekyll/">beautiful-jekyll</a>
+      <a href="https://deanattali.com/beautiful-jekyll/" target="_blank">beautiful-jekyll</a>
     </p>
       </div>
     </div>
